[gd_scene load_steps=4 format=3 uid="uid://cjk0aw5iw4qb6"]

[ext_resource type="Script" uid="uid://1l3hqqsryn3j" path="res://addons/asset_placer/ui/asset_collections_window/asset_collection_window.gd" id="1_g1b7h"]
[ext_resource type="Script" uid="uid://dmicn3kmr620j" path="res://addons/asset_placer/utils/system_icon.gd" id="2_jdl0x"]

[sub_resource type="Texture2D" id="Texture2D_x040h"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_jdl0x")
icon_name = &"Add"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[node name="AssetCollectionWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g1b7h")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="NameTextField" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "New Collection Name"

[node name="ColorPickerButton" type="ColorPickerButton" parent="Panel/MarginContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Color"
color = Color(0.6156863, 0, 0, 1)
edit_intensity = false

[node name="AddButton" type="Button" parent="Panel/MarginContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Godot"
disabled = true
text = "Add"
icon = SubResource("Texture2D_x040h")
icon_alignment = 2

[node name="ChipsContainer" type="HFlowContainer" parent="Panel/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
